# ChangeLog for dev-python/six
# Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-python/six/ChangeLog,v 1.8 2012/09/29 16:28:51 grobian Exp $

  29 Sep 2012; Fabian Groffen <grobian@gentoo.org> six-1.1.0.ebuild:
  Marked ~x86-macos

  06 Aug 2012; Patrick Lauer <patrick@gentoo.org> six-1.1.0.ebuild:
  Restricting jython

  14 Jul 2012; Johannes Huber <johu@gentoo.org> six-1.1.0.ebuild:
  Stable for x86, wrt bug #426466

  14 Jul 2012; Agostino Sarubbo <ago@gentoo.org> six-1.1.0.ebuild:
  Stable for amd64, wrt bug #426466

  04 Apr 2012; Justin Lecher <jlec@gentoo.org> six-1.1.0.ebuild:
  Keyworded for ~-linux tested by me

  01 Apr 2012; Mike Gilbert <floppym@gentoo.org> six-1.1.0.ebuild:
  One more keyword.

  01 Apr 2012; Mike Gilbert <floppym@gentoo.org> six-1.1.0.ebuild:
  Add keywords to satisfy python-dateutil reverse dependency.

*six-1.1.0 (01 Apr 2012)

  01 Apr 2012; Mike Gilbert <floppym@gentoo.org> +metadata.xml,
  +six-1.1.0.ebuild:
  New package.