@@ -2,13 +2,19 @@
 Hash: SHA256
 
 DIST six-1.1.0.tar.gz 12573 SHA256 8c421a58100704148fd9ad2e38b05d5646f6d3139ac209dfda4c980d124c75ba SHA512 a3afc67451009044dfc57a90529a2d1ec4d2f98eba534dd74f529318a03c99d98d4850daed157177145763cd925393f4f0afaba20634b982e201bc7d422cc828 WHIRLPOOL 87c2bbfa392180d203b339267518cafa3d4b695a44ccc7fd540329246a8253f378e6e0bbd306282bd4b11b6b1a5df8d4e0b4fad556ca60959eca94b10a98d4a3
+DIST six-1.2.0.tar.gz 15316 SHA256 4a86d87623f75811524f30832e092914d65af7ff2eb1d403e01ec235b0e19cb3 SHA512 8963f851f88016286a2159f0e7d6eddacdaad8c84048cb233fb2b2371ea2b4b5a3f75a5937677fe5c6ceb1a1f1791362bd181134e0f15409e44e2358e6c07712 WHIRLPOOL 81d1cca6d55055c53143ce0f5b16b2faf3a402122bb3f7cb7228e508665bcd8d4e09a2cbd32278b4bd5085c1789b7b35a84345d259719116a182ecc6561861f4
 EBUILD six-1.1.0.ebuild 849 SHA256 eeb46dbab8382f909b113a22dd7709e624f24b7e5355b27dd4c4f58864922da4 SHA512 283319db8720a548b7f578468bcfd35485bf87c0b576b64d64050e056e00778b3ca03dcd28479aac49d4ddf645f5c11536cc79135d352638d5ac60245a3d96cb WHIRLPOOL 5c7c1771435dafd470953f3b1295a04c6792c06fbb6105daa55c14224a869ba3d0121db0b0928880e0e80c2cfb66f6e740c6fb54174eb62b217a901eeba1eaa2
-MISC ChangeLog 1034 SHA256 09cd94dfb3c75ae178fdd6e1d384f543889dba3eb18b616d3b03bb168b39f5c1 SHA512 c17cb23b59ea198ac6ffdd76a66effdcec75d497b1f5c5d1cbabf7d934227afde2a523c08a061b1b0f7e5fcced38680a1383471e245223a5ea7c34766112f502 WHIRLPOOL 4da5feb8e94c098a4451d832f521f881424583817fe423788d1d21d212b3cc17ee6dba958e4dbf72add6161ed3c1fb13330a25a0b58ae076ec811677e3547543
+EBUILD six-1.2.0.ebuild 947 SHA256 0eef670a9431336631775fd9e3c5d79dad2b184b24b45e671350b809a77e65a8 SHA512 6a57f182d0b423ad16fa572296cff7482441a5558324a9ef3de90b43c097500bce95302c4e65b6f4fb6c3b3325c770a16765da808a24377532bed0fd9c63b776 WHIRLPOOL c94f291f2cffbd776a7d6745b35c289bea3de83221c6f85ed6f1a2e27cb10feecf7b2a76ff12710fa5acc78c244f23677e33701036ba59ec903c875e3415efe6
+MISC ChangeLog 1147 SHA256 3546bf531563cd6b88ed0d612b3d30143b0874959776158b763f4ed04ecc9e77 SHA512 94a5698dc13f941106962c8294c6f243f44598d165b6000b82762aed8fbcb8058a2f239ba8b4b9801c2f6269329829798e31ab77f203bc0420c4d77f5f379f7d WHIRLPOOL a4b12ba08532382301a6977645d297c08e9ea6659a7a75262d3a10061f3a4ddd1214993a46922b95a59361ece1940622f98d487c80a51d2b50c84c4356e7e0cc
 MISC metadata.xml 226 SHA256 bdafefb27f29ded62ff07b71d48d72d5c385dcc4c0e9c95beed417b16edb07e0 SHA512 25f36880da8494a871b8cd71511742e64a43a9f2e5d34a76016d57d803be151446a3107391e54911303cfda7436398c6dec9fbbe0bec5abac98c11a21e1609e3 WHIRLPOOL 1637b7d2a45c8a664f1bfc565bbfe6942ca737c6801ef11baf9f303cf9e8a982e2875c9f88f235aebdf5d7f500504e6851f2d32585089dbd48a5e71a633d86c8
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.19 (Darwin)
+Version: GnuPG v2.0.19 (GNU/Linux)
 
-iEYEAREIAAYFAlBnIckACgkQX3X2B8XHTokpPgCfUU5KXN+sm2qeFbyHUKNkNCLq
-y1IAn3YCsTAlps0/Czq6m/LmvJjuF25x
-=vac2
+iQEcBAEBCAAGBQJQZ4cEAAoJEEqz6FtPBkyjiTgIAIz4PZBpozXJBcv/dRrneUHw
+Lw6HntK6dQAai66tWWTQ/ytY3+o4cg8r8+lfDdik6eaYh+dFuVW8duCf57ka+Kw7
+W4241z/XJWUS5vGQZmKEIdX03Clkza2LLIVMxvfFBdfHqtD680l1wmTJYiZrwyo4
+bC1entMNu3iC8gGWVmJALLc7JPDHS1guQJaryiwxk88XUV1WoI3RPStkpBI3FAlM
+/oHhpyoI9C2YSH+UqBmezFSuyBZ9YqOlnLKRUK19l/wJnkUqOqXYyS4wPSmYwUGz
+mWp9oWYOO3r02DWNdIB3tvqF/iAzP/t/0cPJYlUzKgMQSBIDk0KIa1wWQmyXsFw=
+=MoHA
 -----END PGP SIGNATURE-----
