@@ -1,6 +1,11 @@
 # ChangeLog for dev-python/six
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-python/six/ChangeLog,v 1.8 2012/09/29 16:28:51 grobian Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-python/six/ChangeLog,v 1.9 2012/09/29 23:40:46 radhermit Exp $
+
+*six-1.2.0 (29 Sep 2012)
+
+  29 Sep 2012; Tim Harder <radhermit@gentoo.org> +six-1.2.0.ebuild:
+  Version bump.
 
   29 Sep 2012; Fabian Groffen <grobian@gentoo.org> six-1.1.0.ebuild:
   Marked ~x86-macos
